# project-olympus

./: .env.example  .gitignore  CrewAI_Streamlit.py  README.md  agent_loader.py  agents.json  agents.py  file_io.py  handler.py  handlers.py  main.py  olympus.py  olympus_panel.py  olympus_streamlit.py  pyproject.toml  requirements.txt  tasks.py
Models/: Llama3ModelFile  MistralModelFile  create-mistral-model-file.sh
UI/: index.html
